[FIX] Fix for too wide images in jQuery mobile view
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/12.x@53998 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/layout/design.css
+++ b/styles/layout/design.css
@@ -4748,4 +4748,9 @@ div.drillshow {
     border-color: lightgrey;
 }
 
+/* Fix for too wide images in jQuery mobile view  */
+.ui-mobile img {
+	max-width: 100%;
+}
+
 /* End of file */
